--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.lewdev</groupId>
 	<artifactId>probability-lib</artifactId>
-	<version>0.10-SNAPSHOT</version>
+	<version>0.10</version>
 	<packaging>jar</packaging>
 
 	<name>probability-lib</name>
